--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Alpha Huntsman</title>
+  <meta name="description" content="We provide improved financial analytics tracking and ranking for individual enterprises
+    against a selected group of peers as well as tailor macroeconomic data to see the impact
+    (such as a change in GDP growth by +1%) on various financial metrics (e. g., a likely effect
+    on revenue over the next three months). We do this in a commoditized fashion (i.e., our
+    analytics works on all business problems tackled)">
+  <meta http-equiv="cache-control" content="max-age=864000" />
+  <title>Alpha Huntsman - Tracking the world one data at the time</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
