--- a/src/index.html
+++ b/src/index.html
@@ -23,5 +23,6 @@
 </head>
 <body>
   <app-root></app-root>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/iamdustan-smoothscroll/0.4.0/smoothscroll.min.js"></script>
 </body>
 </html>
