--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
 
     gtag('config', 'G-DLEVD8VZNL');
   </script>
+  <!-- Main tags -->
   <meta charset="utf-8">
   <meta name="description" content="We provide improved financial analytics tracking and ranking for individual enterprises
     against a selected group of peers as well as tailor macroeconomic data to see the impact
@@ -20,6 +21,12 @@
   <title>Alpha Huntsman - Tracking the world one data at the time</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Twitter Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:site" content="@alphahuntsman">
+  <meta name="twitter:title" content="Tracking the world one data point at the time">
+  <meta name="twitter:description" content="Your next-gen financial analytics platform">
+  <meta name="twitter:image" content="https://www.alphahuntsman.com/assets/images/AlphaHuntsman.jpg">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
