LinkedIn meta tags update

--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,11 @@
   <meta name="twitter:title" content="Tracking the world one data point at the time">
   <meta name="twitter:description" content="Your next-gen financial analytics platform">
   <meta name="twitter:image" content="https://www.alphahuntsman.com/assets/images/AlphaHuntsman.jpg">
+  <!-- LinkedIn Tags -->
+  <meta property='og:title' content='Tracking the world one data point at the time'>
+  <meta property='og:image' content='https://www.alphahuntsman.com/assets/images/AlphaHuntsman.jpg'>
+  <meta property='og:description' content='Your next-gen financial analytics platform'>
+  <meta property='og:url' content='www.alphahuntsman.com'>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
