Refer a friend update

--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,8 @@
   <meta property='og:image' content='https://www.alphahuntsman.com/assets/images/AlphaHuntsman.jpg'>
   <meta property='og:description' content='Your next-gen financial analytics platform'>
   <meta property='og:url' content='www.alphahuntsman.com'>
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- favicon -->
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
   <app-root></app-root>
